# calculator-c

./: CMakeLists.txt  README.md  main.c
source/: calculator.c  calculator.h  calculator.ui  console_ui.c  console_ui.h  gtk_ui.c  gtk_ui.h  operation.c  operation.h  ui.h
unit_test/: ut_ui.c  ut_ui.h
